[gd_scene load_steps=3 format=3 uid="uid://cx0yeuxsc2kui"]

[ext_resource type="Theme" uid="uid://dwqhs78076qut" path="res://addons/agent/ui/resource/AgentTheme.tres" id="1_ga12p"]
[ext_resource type="Script" uid="uid://c0aloouufynjd" path="res://addons/agent/ui/role/edit_role_window.gd" id="1_yvfk6"]

[node name="EditRoleWindow" type="Window"]
oversampling_override = 1.0
size = Vector2i(600, 600)
theme = ExtResource("1_ga12p")
script = ExtResource("1_yvfk6")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "角色名称"

[node name="RoleNameEdit" type="LineEdit" parent="Control/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label2" type="Label" parent="Control/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "角色提示词"

[node name="PromptEdit" type="TextEdit" parent="Control/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
placeholder_text = "请输入自定义的角色提示词"

[node name="Label3" type="Label" parent="Control/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "可使用的工具列表"

[node name="EditFunctionContainer" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="CancelButton" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "取消"
theme_type_variation = &"SecondaryButton"
text = "取消"

[node name="CreateButton" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "创建角色"
theme_type_variation = &"PrimaryButton"
text = "确认创建"

[node name="UpdateButton" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "确认编辑角色"
theme_type_variation = &"PrimaryButton"
text = "确认编辑"
